syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

import "DistLedgerCommonDefinitions.proto";

message RegisterRequest {
	string service = 1;
	string qualifier = 2;
	string address = 3;
}

message RegisterResponse {}

message DeleteRequest {
	string service = 1;
	string address = 2;
}

message DeleteResponse {}

message LookupRequest {
	string service = 1;
	string qualifier = 2;
}

message LookupResponse {
	repeated string servers = 1;
}

service NamingServerService {
	rpc registerServer(RegisterRequest) returns (RegisterResponse);
	rpc deleteServer(DeleteRequest) returns (DeleteResponse);
	rpc lookupServer(LookupRequest) returns (LookupResponse);
}
